<resources>
    <string name="app_name">Practica2_Farmacia3.0</string>
    <string name="farmacia_2_0">Farmacia 2.0</string>
    <string name="administrar_base_de_datos">Administrar base de datos</string>
    <string name="ver_listado_de_medicamentos">Ver listado de medicamentos</string>
    <string name="imagenlogotipo">ImagenLogotipo</string>

    <string name="ver_medicamentos">Ver medicamentos</string>
    <string name="introducir_nombre_del_medicamento_a_buscar">Introducir nombre del medicamento a buscar</string>
    <string name="administrar_medicamentos">Administrar medicamentos</string>
    <string name="c_digo">Código</string>

    <string name="limpiar">Limpiar</string>

    <string name="modificar">Modificar</string>
    <string name="descripci_n">Descripción</string>
    <string name="borrar">Borrar</string>
    <string name="a_adir">Añadir</string>
    <string name="borr">borr</string>
    <string name="textview">TextView</string>
    <string name="reg">Reg</string>
    <string name="mod">mod</string>
    <string name="name">Name</string>
    <string name="button">Button</string>

    <string name="buscar">Buscar</string>
    <string name="introduce_el_nombre_del_producto_que_deseas_buscar">Introduce el nombre del producto que deseas buscar</string>
    <string name="descripcion">Descripcion</string>
    <string name="nombre">Nombre</string>
    <string name="codigo">Codigo</string>
    <string name="precio">Precio</string>
    <string name="volver_al_inicio">Volver al Inicio</string>
    <string name="introduzca_su_producto">Introduzca su producto</string>
    <string name="ayuda">La aplicación permite administrar una base de datos de medicamentos, permitiendo AÑADIR, BORRAR o MODIFICAR medicamentos. Para ello puede pulsar el botón de la pantalla de inicio ADMINISTRAR BASE DE DATOS. También podrá buscar medicamentos en la opción VER LISTADO DE MEDICAMENTOS. Además, un vídeo le recordará que deberá consultar toda duda o información con un farmaceútico autorizado.</string>
</resources>