<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B08BC34A"
    tools:context=".ver_resultados">

    <TextView
        android:id="@+id/r_codigo"
        android:layout_width="193dp"
        android:layout_height="53dp"
        android:layout_marginBottom="71dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/r_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/r_descripcion"
        android:layout_width="199dp"
        android:layout_height="50dp"
        android:layout_marginBottom="90dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/r_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/r_precio"
        android:layout_width="213dp"
        android:layout_height="44dp"
        android:layout_marginBottom="69dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/r_nombre"
        android:layout_width="188dp"
        android:layout_height="54dp"
        android:layout_marginBottom="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/r_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.23" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="8dp"
        android:text="@string/descripcion"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/r_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_descripcion" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/r_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_nombre" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="21dp"
        android:text="@string/precio"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/r_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_codigo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginBottom="18dp"
        android:text="@string/codigo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/r_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="265dp"
        android:layout_height="135dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/volver"
        android:layout_width="304dp"
        android:layout_height="54dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="17dp"
        android:onClick="volver"
        android:text="@string/volver_al_inicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_precio" />
</androidx.constraintlayout.widget.ConstraintLayout>